...
          tabBarLabelStyle: { fontFamily: 'Poppins_600SemiBold', fontSize: 10 },
        }}
      >
        <Tabs.Screen
          name="index"
          options={{
            title: 'Accueil',
            tabBarIcon: ({ color, size }) => <Feather name="home" color={color} size={size} />,
          }}
        />
        <Tabs.Screen
          name="sessions"
          options={{
            title: 'Séances',
            tabBarIcon: ({ color, size }) => <Feather name="activity" color={color} size={size} />,
          }}
        />
        <Tabs.Screen
          name="progress"
          options={{
...
